Update account and sha commit reference.

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -13,7 +13,7 @@ jobs:
   build_llvm:
     name: "Build LLVM"
     # Run the reusable workflow located at .github/workflows/build_part_of_image_all_platforms.yaml
-    uses: mrwerdo/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@a0576369b1fe04014207dccce69b805daa3df611
     # Note: a *specific version* of the workflow is being used.
     # See here for details about the bug: https://github.community/t/ref-head-in-reusable-workflows/203690/71
 
@@ -24,8 +24,8 @@ jobs:
       # Use the following images as caches from hub.docker.com.
       # {0} here is substituted with the platform (i.e. generic)
       cache_from: |
-        type=registry,ref=mrwerdo/nubots:{0}-llvm
-        type=registry,ref=mrwerdo/nubots:{0}
+        type=registry,ref=nubots/nubots:{0}-llvm
+        type=registry,ref=nubots/nubots:{0}
         type=inline
     secrets:
       docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -35,7 +35,7 @@ jobs:
   build_intel_graphics_compiler_and_compute_runtime:
     name: "Build Intel Graphics Compiler and Compute Runtime"
     # Run the reusable workflow.
-    uses: mrwerdo/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@a0576369b1fe04014207dccce69b805daa3df611
     # Wait for the following jobs to complete.
     needs: build_llvm
     # Declare inputs for the reusable workflow.
@@ -44,9 +44,9 @@ jobs:
       # Use the following images as caches from hub.docker.com. Notice how llvm is also listed.
       # {0} here is substituted with the platform (i.e. generic)
       cache_from: |
-        type=registry,ref=mrwerdo/nubots:{0}-llvm
-        type=registry,ref=mrwerdo/nubots:{0}-intel-graphics-compiler-and-compute-runtime
-        type=registry,ref=mrwerdo/nubots:{0}
+        type=registry,ref=nubots/nubots:{0}-llvm
+        type=registry,ref=nubots/nubots:{0}-intel-graphics-compiler-and-compute-runtime
+        type=registry,ref=nubots/nubots:{0}
         type=inline
     secrets:
       docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -54,13 +54,13 @@ jobs:
 
   build_openblas:
     name: "Build OpenBLAS"
-    uses: mrwerdo/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@a0576369b1fe04014207dccce69b805daa3df611
     with:
       target: openblas
       # {0} here is substituted with the platform (i.e. generic)
       cache_from: |
-        type=registry,ref=mrwerdo/nubots:{0}-openblas
-        type=registry,ref=mrwerdo/nubots:{0}
+        type=registry,ref=nubots/nubots:{0}-openblas
+        type=registry,ref=nubots/nubots:{0}
         type=inline
     secrets:
       docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -68,13 +68,13 @@ jobs:
 
   build_other_dependencies:
     name: "Build Other Dependencies"
-    uses: mrwerdo/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@a0576369b1fe04014207dccce69b805daa3df611
     with:
       target: other-dependencies
       # {0} here is substituted with the platform (i.e. generic)
       cache_from: |
-        type=registry,ref=mrwerdo/nubots:{0}-other-dependencies
-        type=registry,ref=mrwerdo/nubots:{0}
+        type=registry,ref=nubots/nubots:{0}-other-dependencies
+        type=registry,ref=nubots/nubots:{0}
         type=inline
     secrets:
       docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -83,7 +83,7 @@ jobs:
   # Build the docker image.
   build_docker:
     name: "Build Docker Image"
-    uses: mrwerdo/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@a0576369b1fe04014207dccce69b805daa3df611
     # Wait for previous jobs to finish before building the final image.
     needs:
       - build_llvm
@@ -96,11 +96,11 @@ jobs:
       # Use the following images as caches from hub.docker.com.
       # {0} here is substituted with the platform (i.e. generic)
       cache_from: |
-        type=registry,ref=mrwerdo/nubots:{0}-intel-graphics-compiler-and-compute-runtime
-        type=registry,ref=mrwerdo/nubots:{0}-llvm
-        type=registry,ref=mrwerdo/nubots:{0}-openblas
-        type=registry,ref=mrwerdo/nubots:{0}-other-dependencies
-        type=registry,ref=mrwerdo/nubots:{0}
+        type=registry,ref=nubots/nubots:{0}-intel-graphics-compiler-and-compute-runtime
+        type=registry,ref=nubots/nubots:{0}-llvm
+        type=registry,ref=nubots/nubots:{0}-openblas
+        type=registry,ref=nubots/nubots:{0}-other-dependencies
+        type=registry,ref=nubots/nubots:{0}
         type=inline
     secrets:
       docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -122,7 +122,7 @@ jobs:
 
     # Run on the container we just built
     container:
-      image: mrwerdo/nubots:${{ matrix.platform }}
+      image: nubots/nubots:${{ matrix.platform }}
       options: --user 0:0
 
     # Steps represent a sequence of tasks that will be executed as part of the job
