--- a/.github/workflows/build_part_of_image.yaml
+++ b/.github/workflows/build_part_of_image.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           pull: true
-          tags: "mrwerdo/nubots:pull-request-${{ github.event.number }}-${{ inputs.target }}"
+          tags: "nubots/nubots:pull-request-${{ github.event.number }}-${{ inputs.target }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
