--- a/.github/workflows/build_part_of_image_all_platforms.yaml
+++ b/.github/workflows/build_part_of_image_all_platforms.yaml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           pull: true
-          tags: "mrwerdo/nubots:${{ matrix.platform }}-${{ inputs.target }}"
+          tags: "nubots/nubots:${{ matrix.platform }}-${{ inputs.target }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
@@ -73,7 +73,7 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           pull: true
-          tags: "mrwerdo/nubots:${{ matrix.platform }}"
+          tags: "nubots/nubots:${{ matrix.platform }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
