--- a/docker/Dockerfile.nugus_sim
+++ b/docker/Dockerfile.nugus_sim
@@ -4,6 +4,7 @@ WORKDIR /home/nubots/NUbots
 
 # Add a script that installs packages
 COPY /usr/local/bin/install-package /usr/local/bin/install-package
+COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
 # Install base packages needed for building general toolchain
 # If you have a tool that's needed for a specific module install it before that module
