--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -19,10 +19,8 @@ jobs:
   # Declare a new job.
   build_llvm:
     name: "Build LLVM"
-    # Run the reusable workflow located at .github/workflows/build_part_of_image_all_platforms.yaml
-    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
-    # Note: a *specific version* of the workflow is being used.
-    # See here for details about the bug: https://github.community/t/ref-head-in-reusable-workflows/203690/71
+    # Run the reusable workflow.
+    uses: .github/workflows/build_part_of_image_all_platforms.yaml
 
     # Declare inputs for reusable workflow.
     with:
@@ -42,7 +40,7 @@ jobs:
   build_intel_graphics_compiler_and_compute_runtime:
     name: "Build Intel Graphics Compiler and Compute Runtime"
     # Run the reusable workflow.
-    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image_all_platforms.yaml
     # Wait for the following jobs to complete.
     needs: build_llvm
     # Declare inputs for the reusable workflow.
@@ -61,7 +59,7 @@ jobs:
 
   build_openblas:
     name: "Build OpenBLAS"
-    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image_all_platforms.yaml
     with:
       target: openblas
       # {0} here is substituted with the platform (i.e. generic)
@@ -75,7 +73,7 @@ jobs:
 
   build_other_dependencies:
     name: "Build Other Dependencies"
-    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image_all_platforms.yaml
     with:
       target: other-dependencies
       # {0} here is substituted with the platform (i.e. generic)
@@ -90,7 +88,7 @@ jobs:
   # Build the docker image.
   build_docker:
     name: "Build Docker Image"
-    uses: nubots/nubots/.github/workflows/build_part_of_image_all_platforms.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image_all_platforms.yaml
     # Wait for previous jobs to finish before building the final image.
     needs:
       - build_llvm
