--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -18,10 +18,8 @@ jobs:
   # Declare a new job.
   build_llvm:
     name: "Build LLVM"
-    # Run the reusable workflow located at .github/workflows/build_part_of_image.yaml
-    uses: nubots/nubots/.github/workflows/build_part_of_image.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
-    # Note: a *specific version* of the workflow is being used.
-    # See here for details about the bug: https://github.community/t/ref-head-in-reusable-workflows/203690/71
+    # Run the reusable workflow.
+    uses: .github/workflows/build_part_of_image.yaml
 
     # Declare inputs for reusable workflow.
     with:
@@ -40,7 +38,7 @@ jobs:
   build_intel_graphics_compiler_and_compute_runtime:
     name: "Build Intel Graphics Compiler and Compute Runtime"
     # Run the reusable workflow.
-    uses: nubots/nubots/.github/workflows/build_part_of_image.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image.yaml
     # Wait for the following jobs to complete.
     needs: build_llvm
     # Declare inputs for the reusable workflow.
@@ -58,7 +56,7 @@ jobs:
 
   build_openblas:
     name: "Build OpenBLAS"
-    uses: nubots/nubots/.github/workflows/build_part_of_image.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image.yaml
     with:
       target: openblas
       cache_from: |
@@ -71,7 +69,7 @@ jobs:
 
   build_other_dependencies:
     name: "Build Other Dependencies"
-    uses: nubots/nubots/.github/workflows/build_part_of_image.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image.yaml
     with:
       target: other-dependencies
       cache_from: |
@@ -85,7 +83,7 @@ jobs:
   # Build the docker image.
   build_docker:
     name: "Build docker image"
-    uses: nubots/nubots/.github/workflows/build_part_of_image.yaml@7c884a426f6ba6c1efc07b1a8e7abe025c10c74c
+    uses: .github/workflows/build_part_of_image.yaml
     # Wait for previous jobs to finish before building the final image.
     needs:
       - build_llvm
