--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -19,7 +19,7 @@ jobs:
   build_llvm:
     name: "Build LLVM"
     # Run the reusable workflow.
-    uses: .github/workflows/build_part_of_image.yaml
+    uses: ./.github/workflows/build_part_of_image.yaml
 
     # Declare inputs for reusable workflow.
     with:
@@ -38,7 +38,7 @@ jobs:
   build_intel_graphics_compiler_and_compute_runtime:
     name: "Build Intel Graphics Compiler and Compute Runtime"
     # Run the reusable workflow.
-    uses: .github/workflows/build_part_of_image.yaml
+    uses: ./.github/workflows/build_part_of_image.yaml
     # Wait for the following jobs to complete.
     needs: build_llvm
     # Declare inputs for the reusable workflow.
@@ -56,7 +56,7 @@ jobs:
 
   build_openblas:
     name: "Build OpenBLAS"
-    uses: .github/workflows/build_part_of_image.yaml
+    uses: ./.github/workflows/build_part_of_image.yaml
     with:
       target: openblas
       cache_from: |
@@ -69,7 +69,7 @@ jobs:
 
   build_other_dependencies:
     name: "Build Other Dependencies"
-    uses: .github/workflows/build_part_of_image.yaml
+    uses: ./.github/workflows/build_part_of_image.yaml
     with:
       target: other-dependencies
       cache_from: |
@@ -83,7 +83,7 @@ jobs:
   # Build the docker image.
   build_docker:
     name: "Build docker image"
-    uses: .github/workflows/build_part_of_image.yaml
+    uses: ./.github/workflows/build_part_of_image.yaml
     # Wait for previous jobs to finish before building the final image.
     needs:
       - build_llvm
