Debugging ps3 walk. Commented out accelerometer stuff.
Output is still saying it is trying to connect to js1 rather than js0, even when it is commented out in the config .yaml file
Needs further investigation

--- a/module/input/PS3Controller/data/config/PS3Controller.yaml
+++ b/module/input/PS3Controller/data/config/PS3Controller.yaml
@@ -1,2 +1,2 @@
-controller_path: "/dev/input/js1"
-accelerometer_path: "/dev/input/js0"
+controller_path: "/dev/input/js0"
+# accelerometer_path: "/dev/input/js0"
