change Dockerfile, should make a message

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,8 @@
 ### Date format is ISO year/month/day
 FROM archlinux:base-20210829.0.32635
 
+# Testing for slack messages! -> I like the cool art above!
+
 # ↓↓↓ UPDATE MIRRORS HERE ↓↓↓
 RUN echo -e "Server=http://host.docker.internal:7878/\$repo/os/\$arch\nServer=https://archive.archlinux.org/repos/2021/08/29/\$repo/os/\$arch" | tee /etc/pacman.d/mirrorlist
 
