--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -5,6 +5,7 @@ max_generations: 200
 num_objectives: 2
 num_constraints: 2
 seed: 7777777
+trial_duration_limit: 40 # number of seconds to run a single trial for
 probabilities:
   real:
     # Note that simulated binary crossover (SBX) does something like mutation as well
@@ -21,19 +22,51 @@ eta:
   C: 20
   M: 20
 
-task: "stand"
-task_config_path: "scripts/webots/StandUpFront.yaml"
-initial_translation: [-5.0, -3.0, 0.4]  # x, y, z
-intial_rotation: [0, 1, 0, 1.5]  # x, y, z, angle (rads)
-# The following values are setting the initial values and limits for the script engine parameters.
-# Each item is a frame of the script
-# Each param is the tuple [initial value, minimum, maximum].
-stand:
-  - duration: [1000, 200, 1100]
-  - duration: [1000, 200, 1100]
-  - duration: [2000, 200, 2100]
-  - duration: [1000, 200, 1100]
-  - duration: [1000, 200, 1100]
-  - duration: [1000, 200, 1100]
-  - duration: [1500, 200, 1600]
-  - duration: [1000, 200, 1100]
+task: "walk"
+task_config_path: "config/webots/QuinticWalk.yaml"
+initial_translation: [-7.0, -3.0, 0.51]  # x, y, z
+intial_rotation: [0, 0, 1, 0]  # x, y, z, angle (rads)
+# The following values are setting the initial values and limits for the walk engine parameters.
+# Each param is the tuple [initial value, minimum, maximum]. These values are merged with the
+# values in QuinticWalk.yaml for an individual, and then evaluated with the walk.
+walk:
+  # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
+  # (in Hz, > 0)
+  freq: [3, 0.5, 5.0]
+  # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
+  # (ratio, [0:1])
+  double_support_ratio: [0.1, 0.05, 0.2]
+  foot:
+    # Lateral distance between the feet center (how spread apart the feet should be)
+    # (in m, >= 0)
+    distance: [0.18, 0.12, 0.24]
+    # Maximum flying foot height (how high we lift a foot from the ground)
+    # (in m, >= 0)
+    rise: [0.075, 0.05, 0.17]
+  trunk:
+    # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
+    # (in m, > 0)
+    height: [0.45, 0.35, 0.5]
+    # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
+    # (in rad)
+    pitch: [24 * pi / 180, -15 * pi / 180, 30 * pi / 180]
+    # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
+    # (in m)
+    x_offset: [0.03, -0.05, 0.05]
+    # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
+    # (in m)
+    y_offset: [-0.01, -0.02, 0.02]
+    # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
+    # (ratio, >= 0)
+    swing: [0.03, 0.01, 0.05]
+    # Trunk swing pause length in phase at apex (how long we keep the trunk at the max swing position, before swinging back)
+    # (half cycle ratio, [0:1])
+    pause: [0.1, 0.0, 0.2]
+  pause:
+    # Time that the walking is paused when becoming unstable
+    # (in s, [0:10])
+    duration: [0.5, 0.0, 2.0]
+
+# The following values are setting the initial values and limits for the walk engine command.
+walk_command:
+  velocity: [0.2, 0.01, 0.51]
