--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -21,14 +21,6 @@ on:
       - "!docker/Dockerfile.nugus_sim"
       - "!docker/nugus_sim/**"
 
-  # push:
-  #   branches:
-  #     - main
-  #   paths:
-  #     - 'docker/**'
-  #     - '!docker/Dockerfile.nugus_sim'
-  #     - '!docker/nugus_sim/**'
-
 jobs:
   slack-notifcations:
     runs-on: ubuntu-20.04
@@ -41,5 +33,6 @@ jobs:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: C02PA98RNLC
           slack-text: "<!channel> The docker image was updated! Be sure to run `./b target generic` to ensure issues don't occur. Also try `./b configure --clean` if further issues occur."
-      - name: Result from "Send Message"
-        run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
+      # This might not be needed!
+      # - name: Result from "Send Message"
+      #   run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
