change dockerfile to test again

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,4 @@
+# Testing again?
 ##############################################
 #   ___  ____    ____       _                #
 #  / _ \/ ___|  / ___|  ___| |_ _   _ _ __   #
