--- a/module/motion/QuinticWalk/data/config/webots/QuinticWalkBackwards.yaml
+++ b/module/motion/QuinticWalk/data/config/webots/QuinticWalkBackwards.yaml
@@ -3,20 +3,20 @@ log_level: WARN
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: 3
+  freq: 2.75
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
   double_support_ratio: 0.1
   # Give extra swing to first step for better start
   # (in ?, [0:10])
-  first_step_swing_factor: 0.5 #0.8 #1.0
+  first_step_swing_factor: 0.0 #1.0
   foot:
     # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
     distance: 0.18 #0.28
     # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
-    rise: 0.075 #0.1
+    rise: 0.2 #0.1
     # Pause of Z movement on highest point (how long we hold a foot at the top, as a ratio of how long we're standing on one foot)
     # (single support cycle ratio, [0,1])
     z_pause: 0.0 #0.04
@@ -47,7 +47,7 @@ walk:
     height: 0.45
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
-    pitch: 24 * pi / 180 #28
+    pitch: -15 * pi / 180 #28 #24 * pi / 180 #28
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
     phase: 0.15
@@ -123,9 +123,9 @@ gains:
   arms: 13
 
 arms:
-  right_shoulder_pitch: 0 #1.98
-  left_shoulder_pitch: 0 #1.98
+  right_shoulder_pitch: 0.785 #1.57 #2.25
+  left_shoulder_pitch:  0.785 #1.57 #2.25
   right_shoulder_roll: -0.176
-  left_shoulder_roll: 0.176
-  right_elbow: -1
-  left_elbow: -1
+  left_shoulder_roll:   0.176
+  right_elbow: -2 #1
+  left_elbow: -2 #1
