--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -71,6 +71,6 @@ walk:
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [-0.2, -0.51, -0.01] #[0.2, 0.01, 0.51]
+  velocity: [0.2, 0.01, 0.51]
   #velocity: [-0.2, -0.51, 0.01] #[0.0, 0.0, 0.0]
   #rotation: [0.15, 0.1, 1.57]
