--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -6,12 +6,12 @@ name: Docker Slack Message
 # Control when this will run!
 on:
   # testing on pull request, sends a message everytime
-  pull_request:
-    branches: [main]
-    paths:
-      - 'docker/**'
-      - '!docker/Dockerfile.nugus_sim'
-      - '!docker/nugus_sim/**'
+  # pull_request:
+  #   branches: [main]
+  #   paths:
+  #     - 'docker/**'
+  #     - '!docker/Dockerfile.nugus_sim'
+  #     - '!docker/nugus_sim/**'
 
   push:
     branches:
@@ -31,7 +31,8 @@ jobs:
         id: notify
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
-          slack-channel: C02PA98RNLC
+          # slack-channel: C02PA98RNLC # Docker testing channel
+          slack-channel: C60N67TLJ # Development channel
           slack-text: "<!channel> The docker image was updated! Be sure to run `./b target generic` to ensure issues don't occur. Also try `./b configure --clean` if further issues occur."
       # This might not be needed!
       # - name: Result from "Send Message"
