--- a/module/vision/VisualMesh/data/config/VisualMesh.yaml
+++ b/module/vision/VisualMesh/data/config/VisualMesh.yaml
@@ -1,5 +1,6 @@
 log_level: WARN
 
+# When making a visualmesh config file for a new platform, specify the cameras as follows:
 # The settings for each camera
 # CameraName:
 #   concurrent: How many engines to make available to concurrently execute networks
@@ -7,22 +8,3 @@ log_level: WARN
 #   spotlight:
 #     distance: the distance range for the spotlight mesh to be generated for
 #     radius: the search radius to do at that distance (NOT THE RADIUS OF THE OBJECT)
-
-cameras:
-  Left:
-   concurrent: 2
-   network: config/networks/RobocupNetwork.yaml
-   engine: opencl
-   classifier:
-     height: [0.5, 1.0]
-     max_distance: 15
-     intersection_tolerance: 0.25
-
- Right:
-   concurrent: 2
-   network: config/networks/RobocupNetwork.yaml
-   engine: opencl
-   classifier:
-     height: [0.5, 1.0]
-     max_distance: 15
-     intersection_tolerance: 0.25
