Separate webots and real robot SensorFilter config
real robot doesn't have touch sensors
current set up doesn't work on real robot since it doesn't think its feet are on the ground

--- a/module/input/SensorFilter/data/config/webots/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/webots/SensorFilter.yaml
@@ -1,10 +1,5 @@
-log_level: ERROR
-
-buttons:
-  debounce_threshold: 7
-
 foot_down:
-  method: Z_HEIGHT
+  method: FSR
   known_methods:
     - name: FSR # Literal FSR
       certainty_threshold: 30 # Webots uses a bool sensor, this could be anything > 0. Normal robot uses FSR which is non bool
