Add in platform-specific configuration and set the hostname in docker to 'webots' if the role contains the word 'webots' (#833)
* Add platform to config checking...

* Fix build errors

* Update webots walk config

default was being used to tune webots, so put this in the webots config folder

* separate webots and real robot config

Co-authored-by: Jesse Perrin <jesse.perrin@uon.edu.au>

* Pseudocode for possible place to change hostname to webots

* Set the hostname to webots if the binary contains the word webots

* Reorganise visualmesh config to prevent merging issues

* Don't repeat fields in visualmesh yaml

* Separate webots and real robot SensorFilter config

real robot doesn't have touch sensors
current set up doesn't work on real robot since it doesn't think its feet are on the ground

Co-authored-by: Jesse Perrin <jesse.perrin@uon.edu.au>

--- a/module/vision/VisualMesh/data/config/webots/VisualMesh.yaml
+++ b/module/vision/VisualMesh/data/config/webots/VisualMesh.yaml
@@ -1,6 +1,3 @@
-log_level: WARN
-
-# When making a visualmesh config file for a new platform, specify the cameras as follows:
 # The settings for each camera
 # CameraName:
 #   concurrent: How many engines to make available to concurrently execute networks
@@ -8,3 +5,13 @@ log_level: WARN
 #   spotlight:
 #     distance: the distance range for the spotlight mesh to be generated for
 #     radius: the search radius to do at that distance (NOT THE RADIUS OF THE OBJECT)
+
+cameras:
+  left_camera:
+    concurrent: 2
+    network: config/networks/WebotsNetwork.yaml
+    engine: cpu
+    classifier:
+      height: [0.5, 1.0]
+      max_distance: 15
+      intersection_tolerance: 0.25
